--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
-[package]
-name = "patch_lib"
-version = "0.1.0"
-authors = ["Peter Williams <pwil3058@gmail.com>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-lcs = "0.2.0"
-regex = "1"
+members = [
+    "patch",
+    "diff",
+    "diff_patch"
+]
